# kerka_vacancy_tg_bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
bot/: __init__.py  __main__.py  bot.py  callback_data.py  enums.py  env.py  filters.py  markups.py  phrases.py  state.py
bot/handlers/: errors.py
bot/handlers/admin/: admin.py  ban_user.py  export_logs.py  export_users.py  set_balance.py
bot/handlers/user/: deposit.py  start.py
bot/middleware/: bot_user_middleware.py
prisma/: schema.prisma
