[tool.poetry]
name = "kerka-vacancy-tg-bot"
version = "0.1.0"
description = ""
authors = ["TrixiS <oficialmorozov@gmail.com>"]
readme = "README.md"
packages = [{include = "kerka_vacancy_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
