[tool.poetry]
name = "kerka-vacancy-tg-bot"
version = "0.1.0"
description = ""
authors = ["TrixiS <oficialmorozov@gmail.com>"]
readme = "README.md"
packages = [{include = "kerka_vacancy_tg_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
prisma = "^0.8.2"
aiogram = "^2.25.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
nanoid = "^2.0.0"
pyqiwip2p = "^2.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
